@@ -2,8 +2,9 @@ Changelog for Office.
 
 1.1.4-pl
 ==============
-- Fixed work of frontend scripts whe Minify is not working.
-- Removed option "profile_force_email_as_username" by default.
+- [Main] Fixed work of frontend scripts whe Minify is not working.
+- [Profile] Removed option "profile_force_email_as_username" by default.
+- [#6] [Profile] Ability not to use email in profile form.
 
 1.1.3-pl
 ==============
